# AsyncPython-Sprint5

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.aws/: config  credentials
.github/workflows/: app-testing.yml
alembic/: env.py
alembic/versions/: 2023-03-30_init_user_table.py  2023-03-31_add_field_size_to_file_table.py  2023-03-31_create_file_table.py  2023-04-01_init_tables_user_file.py  2023-04-02_remove_content_field_from_files_table.py  7b330888f708_update_user_table.py  fdeda40edcbc_init_user_table.py
requirements/: dev.txt
src/: main.py
src/auth/: constants.py  dependencies.py  models.py  router.py  schemas.py  security.py  service.py  settings.py
src/base/: database.py  exceptions.py  service.py  settings.py
src/core/: router.py  schemas.py  service.py
src/storage/: client.py  constants.py  dependencies.py  models.py  router.py  schemas.py  service.py  settings.py
tests/: conftest.py
tests/test_cases/: test_auth.py  test_base.py  test_core.py  test_storage.py
